--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'jacoco'
     id 'org.springframework.boot' version '3.0.5'
     id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.sonarqube' version '3.5.0.2730'
 }
 
 group = 'pe.despachalo'
@@ -77,5 +78,13 @@ jacocoTestCoverageVerification {
                 minimum = 0.85
             }
         }
+    }
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "despachalo_app"
+        property "sonar.organization", "despachalo"
+        property "sonar.host.url", "https://sonarcloud.io"
     }
 }
