add test coverage report and dependency to test task

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,16 +63,19 @@ dependencyManagement {
 test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
+    finalizedBy jacocoTestCoverageVerification
 }
 
 jacocoTestReport {
     dependsOn test
     reports {
         xml.enabled true
+        html.enabled true
     }
 }
 
 jacocoTestCoverageVerification {
+    dependsOn test
     violationRules {
         rule {
             limit {
