--- a/app/src/main/resources/db/changelog/v1.0.0/changelog.yml
+++ b/app/src/main/resources/db/changelog/v1.0.0/changelog.yml
@@ -2,3 +2,6 @@ databaseChangeLog:
   - include:
       file: 01-create-company-table.changelog.yml
       relativeToChangelogFile: true
+  - include:
+      file: 02-create-distribution-center-table.changelog.yml
+      relativeToChangelogFile: true
