change extension for docker-compose file to defined its use only for dev

--- a/app/src/main/resources/application-dev.yml
+++ b/app/src/main/resources/application-dev.yml
@@ -13,5 +13,10 @@ spring:
     user: despachalo_dev
     password: despachalo_dev
 
+  docker:
+    compose:
+      enabled: true
+      file: ./app/docker-compose.dev.yml
+
 springdoc:
   show-actuator: true
